# nwp_pyutils

./: LICENSE.md  README.md  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
confs/: jinja2_interface.py
docs/source/: conf.py  execute.executable_interface.rst  execute.rst  tools.parser_interface.rst
execute/: executable_interface.py
execute/schema/: executable.schema.yaml
tools/: fileio_interface.py  parser_interface.py
utils/: exceptions_interface.py
