[metadata]
name = nwp_pyutils
version = attr: nwp_pyutils.__version__
description = Python API for Numerical Weather Prediction Related Applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Henry R. Winterbottom
author_email = hrwinterbottom@gmail.com
home_page = https://github.com/HenryRWinterbottom/nwp_pyutils
license = GNU General Public License (GPL)
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License (GPL)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: ">= 3.9"
  Topic :: Software Development :: Libraries :: Python Modules
  Operating System :: OS Independent
  Typing :: Typed
project_urls =
  Bug Tracker = https://github.com/HenryRWinterbottom/nwp_pyutils/issues

[options]
zip_safe = False
include_package_data = True
package_dir =
  =./
packages = find_namespace:
python_requires = >= 3.9
setup_requires =
  setuptools
install_requires =
  netcdf4==1.6.2
  numpy>=1.23
  astropy==5.2
  bs4==0.0.1
  croniter==1.3.8
  pyyaml==6.0
  boto3==1.24.28
  schema==0.7.5
  xarray
  jinja2==3.1.2
  lxml==4.9.2
  pytest==7.2.0
  pytest-order==1.0.1
  xmltodict==0.13.0
  tabulate==0.9.0
  rich_argparse==1.1.1
  pygithub==1.59.1
  gitpython==3.1.40
  alive_progress==3.1.5
  f90nml==1.4.3

[options.packages.find]
where=./

[options.package_data]
* = *.txt, *.md

